TS-4911: ts_lua plugin is modified to clear 'client_response_hdrp' pointer when it enters SEND_RESPONSE_HDR hook.

(cherry picked from commit 7662c30e48a444d0d8d37b2e2d34f71b21e3bfcd)